--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^17.0.0 || ^18.0.0",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
